Fix: URLEncoder#encode adjustment for Java8
URLEncoder.encode requires the encoding parameter as a string in
Java8, not as a Charset.

(cherry picked from commit 25dde13a4e2cccd1ddc5874afc34397e46752e9f)